--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ body {
     margin-left: 10px;
     margin-right: 10px;
     padding: 10px;
+    width: 70%;
     height: 500px;
     display: flex;
     flex-direction: column;
@@ -122,12 +123,13 @@ button {
     --border-color: #BBC1E1;
   }
   
-  #results{
+  #ResultContainer{
     position: absolute;
     margin-left: 10px;
     margin-right: 10px;
     padding: 10px;
     height: 500px;
+    width: 70%;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -139,6 +141,11 @@ button {
     -webkit-box-shadow: 6px 6px 5px 0px #007bff52;
     -moz-box-shadow: 6px 6px 5px 0px #007bff52;
     border-radius: 10px;
+}
+
+#results{
+    height: 100%;
+    overflow: auto;
 }
 
 .modal-close{
